--- a/index.html
+++ b/index.html
@@ -147,117 +147,134 @@
     </div>
   </section>
 
- <!-- PRESTATIONS -->
-<section id="prestations" class="section prestations" aria-labelledby="h-prestations">
+  <!-- PRESTATIONS -->
+  <section id="prestations" class="section prestations" aria-labelledby="h-prestations">
+    <div class="container">
+      <h2 id="h-prestations">
+        Prestations <span class="accent">sur-mesure</span>
+      </h2>
+      <p class="lead">
+        Vous ne voyez pas exactement ce dont vous avez besoin ?
+        <br>
+        Je suis persuadé de pouvoir trouver une solution. Chaque situation est unique, comme chaque village de Cerdagne. 😉
+      </p>
+
+      <div class="grid-cards">
+        <article class="service" data-magnet>
+          <h3>🔧 Dépannage & optimisation</h3>
+          <p class="service-tagline">Quand ça rame, plante ou ne s’allume plus.</p>
+          <ul class="service-list">
+            <li>Nettoyage et diagnostic complet</li>
+            <li>Branchements divers & connexions (imprimantes, scanners, écrans, box…)</li>
+            <li>Optimisation des performances</li>
+          </ul>
+        </article>
+
+        <article class="service" data-magnet>
+          <h3>🛡️ Sécurité & sauvegardes</h3>
+          <p class="service-tagline">Protéger vos données et vos souvenirs.</p>
+          <ul class="service-list">
+            <li>Sécurisation après arnaque ou tentative de piratage</li>
+            <li>Tri & transfert de vos fichiers importants</li>
+            <li>Récupération de données (quand c’est encore possible)</li>
+            <li>Sauvegardes locales & cloud</li>
+          </ul>
+        </article>
+
+        <article class="service" data-magnet>
+          <h3>📦 Installations & personnalisation</h3>
+          <p class="service-tagline">Être opérationnel, sans prise de tête.</p>
+          <ul class="service-list">
+            <li>Mise en fonction Windows, macOS & Linux</li>
+            <li>Configuration de PC, tablettes & smartphones</li>
+            <li>Réglages adaptés à vos usages et à votre confort</li>
+          </ul>
+        </article>
+
+        <article class="service" data-magnet>
+          <h3>💡 Conseils & achat</h3>
+          <p class="service-tagline">Acheter juste, pas plus.</p>
+          <ul class="service-list">
+            <li>Recommandations d’achat 100&nbsp;% désintéressées</li>
+            <li>Choix du meilleur rapport qualité/prix selon votre usage</li>
+            <li>Repérage des bonnes offres du moment</li>
+            <li>Identification claire de votre besoin</li>
+          </ul>
+        </article>
+
+        <article class="service" data-magnet>
+          <h3>🖥️ Programmation & visibilité</h3>
+          <p class="service-tagline">Gagner du temps et être visible.</p>
+          <ul class="service-list">
+            <li>Sites web</li>
+            <li>Réseaux sociaux & stratégie de communication digitale</li>
+            <li>Création d'applications & automatisation de tâches</li>
+            <li>Création de flyers & logos</li>
+          </ul>
+        </article>
+
+        <article class="service" data-magnet>
+          <h3>📚 Formation & accompagnement</h3>
+          <p class="service-tagline">Apprendre à votre rythme, sans jargon.</p>
+          <ul class="service-list">
+            <li>Audit & conseils personnalisés</li>
+            <li>Cours d’informatique</li>
+            <li>Accompagnement pas à pas</li>
+            <li>Aide à la prise en main sereine de vos outils numériques</li>
+          </ul>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- EXPERTISE -->
+  <section id="expertise" class="section expertise" aria-labelledby="h-expertise">
   <div class="container">
-    <h2 id="h-prestations">
-      Prestations <span class="accent">sur-mesure</span>
-    </h2>
-    <p class="lead">
-      Vous ne voyez pas exactement ce dont vous avez besoin ?
-      <br>
-      Je suis persuadé de pouvoir trouver une solution. Chaque situation est unique, comme chaque village de Cerdagne. 😉
-    </p>
-
-    <div class="grid-cards">
-      <article class="service" data-magnet>
-        <h3>🔧 Dépannage & optimisation</h3>
-        <p class="service-tagline">Quand ça rame, plante ou ne s’allume plus.</p>
-        <ul class="service-list">
-          <li>Nettoyage et diagnostic complet</li>
-          <li>Branchements divers & connexions (imprimantes, scanners, écrans, box…)</li>
-          <li>Optimisation des performances</li>
+    <div class="split reverse">
+      <div class="card glow">
+        <h3>Expertise</h3>
+        <ul class="tick">
+          <li data-magnet>
+            Programmation web & outils sur-mesure
+            (automatisation de vos tâches répétitives)
+          </li>
+          <li data-magnet>
+            Cybersécurité, sauvegardes & récupération de données
+          </li>
+          <li data-magnet>
+            Optimisation des performances
+            (PC, organisation et usages numériques)
+          </li>
+          <li data-magnet>
+            Recommandations d’achat 100&nbsp;% désintéressées
+          </li>
         </ul>
-      </article>
+      </div>
 
-      <article class="service" data-magnet>
-        <h3>🛡️ Sécurité & sauvegardes</h3>
-        <p class="service-tagline">Protéger vos données et vos souvenirs.</p>
-        <ul class="service-list">
-          <li>Sécurisation après arnaque ou tentative de piratage</li>
-          <li>Tri & transfert de vos fichiers importants</li>
-          <li>Récupération de données (quand c’est encore possible)</li>
-          <li>Sauvegardes locales & cloud</li>
-        </ul>
-      </article>
-
-      <article class="service" data-magnet>
-        <h3>📦 Installations & personnalisation</h3>
-        <p class="service-tagline">Être opérationnel, sans prise de tête.</p>
-        <ul class="service-list">
-          <li>Mise en fonction Windows, macOS & Linux</li>
-          <li>Configuration de PC, tablettes & smartphones</li>
-          <li>Réglages adaptés à vos usages et à votre confort</li>
-        </ul>
-      </article>
-
-      <article class="service" data-magnet>
-        <h3>💡 Conseils & achat</h3>
-        <p class="service-tagline">Acheter juste, pas plus.</p>
-        <ul class="service-list">
-          <li>Recommandations d’achat 100&nbsp;% désintéressées</li>
-          <li>Choix du meilleur rapport qualité/prix selon votre usage</li>
-          <li>Repérage des bonnes offres du moment</li>
-          <li>Identification claire de votre besoin</li>
-        </ul>
-      </article>
-
-      <article class="service" data-magnet>
-        <h3>🖥️ Programmation & visibilité</h3>
-        <p class="service-tagline">Gagner du temps et être visible.</p>
-        <ul class="service-list">
-          <li>Sites web</li>
-          <li>Réseaux sociaux & stratégie de communication digitale</li>
-          <li>Création d'applications & automatisation de tâches</li>
-          <li>Création de flyers & logos</li>
-        </ul>
-      </article>
-
-      <article class="service" data-magnet>
-        <h3>📚 Formation & accompagnement</h3>
-        <p class="service-tagline">Apprendre à votre rythme, sans jargon.</p>
-        <ul class="service-list">
-          <li>Audit & conseils personnalisés</li>
-          <li>Cours d’informatique</li>
-          <li>Accompagnement pas à pas</li>
-          <li>Aide à la prise en main sereine de vos outils numériques</li>
-        </ul>
-      </article>
+      <div>
+        <h2 id="h-expertise">
+          Expertise <span class="accent">tech + humaine</span>
+        </h2>
+        <p class="lead">
+          Au-delà de la technique, je prends le temps de comprendre votre situation, d’expliquer simplement… et de vous rassurer.
+        </p>
+        <p class="lead">
+          Coach Consultant Certifié, je suis également spécialisé dans l'accompagnement et la relation d'aide.
+        </p>
+        <div class="chips">
+          <span data-magnet>Transparence</span>
+          <span data-magnet>Pédagogie</span>
+          <span data-magnet>Écoute</span>
+          <span data-magnet>Suivi</span>
+          <span data-magnet>Bienveillance</span>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 
-
-    <!-- EXPERTISE -->
-  <section id="expertise" class="section expertise" aria-labelledby="h-expertise">
-    <div class="container">
-      <div class="split reverse">
-        <div class="card glow">
-          <h3>Expertise</h3>
-          <ul class="tick">
-            <li data-magnet>Programmation web & applicatives (automatisation des tâches répétitives)</li>
-            <li data-magnet>Cybersécurité, Récupération de données & Sauvegardes</li>
-            <li data-magnet>Optimisation des performances</li>
-            <li data-magnet>Spécialiste de la recommandation d'achat désintéressée</li>
-          </ul>
-        </div>
-        <div>
-          <h2 id="h-expertise">Expertise <span class="accent">tech + humaine</span></h2>
-          <p class="lead">Au-delà de la technique, je prends le temps d'écouter, d’expliquer et de rassurer.</p>
-          <p class="lead">Coach Consultant Certifié, je suis également spécialisé dans l'accompagnement pour mieux vous servir.</p>
-          <div class="chips">
-            <span data-magnet>Transparence</span>
-            <span data-magnet>Patience</span>
-            <span data-magnet>Clarté</span>
-            <span data-magnet>Suivi</span>
-            <span data-magnet>Bienveillance</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
   
- <!-- AVIS -->
+  <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
     <div class="container">
       <h2 id="h-avis" data-split>
@@ -266,11 +283,12 @@
 
       <div class="reviews__top">
         <p class="lead">
-          Ce que vous dites de mes services.
+          Vos avis sur mes services.
           <a
             href="https://www.google.com/maps/place/Informatique+Cerdagne+-+Rémy+ROGER/@42.4626447,1.9389666,15z/data=!4m6!3m5!1s0xff50f70f4b9a303:0xff407f2d8556019c!8m2!3d42.4626447!4d1.9389666!16s%2Fg%2F11shllyt86?entry=ttu"
             target="_blank"
             rel="noopener"
+            class="premium"
           >
             Voir tous les avis sur Google
           </a>
