--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@
             (automatisation de vos tâches répétitives)
           </li>
           <li data-magnet>
-            Cybersécurité, sauvegardes & récupération de données
+            Cybersécurité & Récupération de données
           </li>
           <li data-magnet>
-            Optimisation des performances
-            (PC, organisation et usages numériques)
+            Optimisation des performances & Sauvegardes
           </li>
           <li data-magnet>
             Recommandations d’achat 100&nbsp;% désintéressées
@@ -259,7 +258,7 @@
           Au-delà de la technique, je prends le temps de comprendre votre situation, d’expliquer simplement… et de vous rassurer.
         </p>
         <p class="lead">
-          Coach Consultant Certifié, je suis également spécialisé dans l'accompagnement et la relation d'aide.
+          <a href="https://www.coachingparecrit.fr/" class="premium">Coach Consultant Certifié</a>, je suis également spécialisé dans l'accompagnement et la relation d'aide.
         </p>
         <div class="chips">
           <span data-magnet>Transparence</span>
@@ -392,7 +391,7 @@
         </div>
       </template>
 
-      <div class="reviews" aria-live="polite" data-magnet></div>
+      <div class="reviews" aria-live="polite"></div>
 
       <div class="reviews__controls" aria-controls="reviews">
         <button class="prev" type="button" aria-label="Avis précédent" data-magnet>←</button>
