--- a/index.html
+++ b/index.html
@@ -235,14 +235,16 @@
         <h3>Expertise</h3>
         <ul class="tick">
           <li data-magnet>
-            Programmation web & outils sur-mesure
-            (automatisation de vos tâches répétitives)
+            Programmation web & applicative sur-mesure
           </li>
           <li data-magnet>
-            Cybersécurité & Récupération de données
+            Automatisation des tâches & processus
           </li>
           <li data-magnet>
             Optimisation des performances & Sauvegardes
+          </li>
+          <li data-magnet>
+            Cybersécurité & Récupération de données
           </li>
           <li data-magnet>
             Recommandations d’achat 100&nbsp;% désintéressées
@@ -258,7 +260,7 @@
           Au-delà de la technique, je prends le temps de comprendre votre situation, d’expliquer simplement… et de vous rassurer.
         </p>
         <p class="lead">
-          <a href="https://www.coachingparecrit.fr/" class="premium">Coach Consultant Certifié</a>, je suis également spécialisé dans l'accompagnement et la relation d'aide.
+          <a href="https://www.coachingparecrit.fr/" class="premium" target="_blank">Coach Consultant Certifié</a>, je suis également spécialisé dans l'accompagnement et la relation d'aide.
         </p>
         <div class="chips">
           <span data-magnet>Transparence</span>
@@ -271,7 +273,6 @@
     </div>
   </div>
 </section>
-
   
   <!-- AVIS -->
   <section id="avis" class="section avis" aria-labelledby="h-avis">
