--- a/tarifs.html
+++ b/tarifs.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Comprendre mes tarifs – Informatique Cerdagne</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Les 12 « commandements » de mes tarifs – Informatique Cerdagne</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-      --bg: #020617;
-      --bg-alt: #050816;
-      --card: rgba(15, 23, 42, 0.96);
-      --card-soft: rgba(15, 23, 42, 0.88);
+      /* Palette alignée sur ton site */
+      --pink: #FF5E8E;
+      --yellow: #F7C600;
+
+      --bg: #0c0d12;
+      --text: #f7f7f7;
+      --muted: #b9bfd6;
+      --card: #141723;
+      --card-soft: #181b28;
       --border-soft: rgba(148, 163, 184, 0.35);
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --yellow: #f7c600;
-      --pink: #ec4899;
+
       --radius-xl: 26px;
       --radius-lg: 20px;
       --shadow-soft: 0 24px 60px rgba(0, 0, 0, 0.75);
@@ -26,20 +28,23 @@
       padding: 0;
     }
 
-    html, body {
+    html,
+    body {
       height: 100%;
     }
 
+    html {
+      background: var(--bg);
+    }
+
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
-        "Segoe UI", sans-serif;
-      background:
-        radial-gradient(circle at 0% 0%, rgba(236, 72, 153, 0.08), transparent 55%),
-        radial-gradient(circle at 100% 100%, rgba(247, 198, 0, 0.12), transparent 55%),
-        radial-gradient(circle at 50% 120%, #020617 0, #020617 45%, #000 100%);
+      margin: 0;
+      font-family: system-ui, -apple-system, "SF Pro Text", "Segoe UI", sans-serif;
       color: var(--text);
+      background: var(--bg); /* fond uni bleu nuit sombre */
       line-height: 1.6;
       -webkit-font-smoothing: antialiased;
+      overflow-x: hidden;
     }
 
     main {
@@ -48,26 +53,17 @@
       padding: 3.5rem 1.5rem 3.75rem;
     }
 
+    /* ========= HERO ========= */
+
     header.hero {
       margin-bottom: 2.5rem;
       padding: 2.25rem 2rem 2.4rem;
       border-radius: var(--radius-xl);
-      background:
-        radial-gradient(circle at 0% 0%, rgba(236, 72, 153, 0.28), transparent 55%),
-        radial-gradient(circle at 100% 0%, rgba(247, 198, 0, 0.25), transparent 55%),
-        linear-gradient(135deg, #020617, #020617 40%, #050816 100%);
+      background: var(--card); /* même famille que le reste */
       box-shadow: var(--shadow-soft);
       border: 1px solid rgba(248, 250, 252, 0.12);
       position: relative;
       overflow: hidden;
-    }
-
-    .hero::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: radial-gradient(circle at 110% 120%, rgba(15, 23, 42, 0.7), transparent 60%);
-      pointer-events: none;
     }
 
     .hero-inner {
@@ -86,9 +82,9 @@
       font-size: 0.8rem;
       letter-spacing: 0.12em;
       text-transform: uppercase;
-      background: rgba(15, 23, 42, 0.7);
+      background: rgba(15, 23, 42, 0.9);
       color: var(--muted);
-      border: 1px solid rgba(148, 163, 184, 0.5);
+      border: 1px solid rgba(148, 163, 184, 0.55);
     }
 
     .badge-dot {
@@ -96,25 +92,26 @@
       height: 7px;
       border-radius: 999px;
       background: radial-gradient(circle at 30% 0%, var(--yellow), var(--pink));
-      box-shadow: 0 0 10px rgba(248, 250, 252, 0.5);
+      box-shadow: 0 0 10px rgba(248, 250, 252, 0.6);
     }
 
     h1 {
-      font-size: clamp(2.2rem, 3.2vw, 2.8rem);
+      font-size: clamp(2.2rem, 3.4vw, 3rem);
       line-height: 1.1;
-      font-weight: 800;
+      font-weight: 900;
       letter-spacing: -0.03em;
-      margin-bottom: 0.75rem;
+      margin: 0.85rem 0 0.8rem;
     }
 
-    h1 span.accent {
+    h1 .accent {
       background: linear-gradient(90deg, var(--yellow), var(--pink));
       -webkit-background-clip: text;
+      background-clip: text;
       color: transparent;
     }
 
     .hero-subtitle {
-      max-width: 640px;
+      max-width: 720px;
       color: var(--muted);
       font-size: 0.98rem;
     }
@@ -133,7 +130,7 @@
       font-weight: 600;
     }
 
-    /* Layout blocks */
+    /* ========= BLOCKS ========= */
 
     .grid {
       display: flex;
@@ -143,10 +140,7 @@
 
     .block {
       border-radius: var(--radius-lg);
-      background:
-        radial-gradient(circle at 0% 0%, rgba(236, 72, 153, 0.14), transparent 55%),
-        radial-gradient(circle at 100% 100%, rgba(248, 250, 252, 0.04), transparent 60%),
-        var(--card-soft);
+      background: var(--card-soft);
       border: 1px solid var(--border-soft);
       box-shadow: 0 18px 45px rgba(0, 0, 0, 0.8);
       padding: 1.6rem 1.75rem 1.7rem;
@@ -173,8 +167,9 @@
       font-weight: 800;
       font-size: 0.95rem;
       color: #020617;
-      box-shadow: 0 0 0 1px rgba(248, 250, 252, 0.16),
-                  0 10px 20px rgba(0, 0, 0, 0.75);
+      box-shadow:
+        0 0 0 1px rgba(248, 250, 252, 0.18),
+        0 10px 20px rgba(0, 0, 0, 0.75);
       margin-bottom: 0.25rem;
     }
 
@@ -245,16 +240,13 @@
       color: var(--muted);
     }
 
-    /* Summary block */
+    /* ========= SUMMARY ========= */
 
     .summary {
       margin-top: 2rem;
       padding: 1.8rem 1.8rem 1.9rem;
       border-radius: var(--radius-xl);
-      background:
-        radial-gradient(circle at 0% 0%, rgba(236, 72, 153, 0.25), transparent 60%),
-        radial-gradient(circle at 100% 100%, rgba(247, 198, 0, 0.22), transparent 60%),
-        linear-gradient(135deg, #020617, #050816);
+      background: var(--card);
       border: 1px solid rgba(248, 250, 252, 0.16);
       box-shadow: var(--shadow-soft);
       display: grid;
@@ -266,9 +258,16 @@
       letter-spacing: -0.02em;
     }
 
+    .summary h2 .accent {
+      background: linear-gradient(90deg, var(--yellow), var(--pink));
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+    }
+
     .summary-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
       gap: 0.9rem;
       font-size: 0.93rem;
     }
@@ -276,8 +275,8 @@
     .summary-item {
       padding: 0.7rem 0.8rem;
       border-radius: 18px;
-      background: rgba(15, 23, 42, 0.84);
-      border: 1px solid rgba(148, 163, 184, 0.45);
+      background: rgba(15, 23, 42, 0.9);
+      border: 1px solid rgba(148, 163, 184, 0.55);
     }
 
     .summary-item span {
@@ -298,28 +297,31 @@
       color: var(--muted);
     }
 
-    /* Small “print friendly” tweak */
-    @media print {
-      body {
-        background: #020617;
-      }
-      header.hero,
-      .block,
-      .summary {
-        box-shadow: none;
-      }
-    }
+    /* ========= RESPONSIVE / PRINT ========= */
 
     @media (max-width: 720px) {
       header.hero {
         padding: 1.8rem 1.4rem 1.7rem;
       }
+
       .block {
         padding: 1.4rem 1.3rem 1.5rem;
         grid-template-columns: minmax(0, 1fr);
       }
+
       .block-number {
         margin-bottom: 0.35rem;
+      }
+    }
+
+    @media print {
+      body {
+        background: #000;
+      }
+      header.hero,
+      .block,
+      .summary {
+        box-shadow: none;
       }
     }
   </style>
@@ -334,12 +336,13 @@
             Informatique Cerdagne – Tarifs
           </div>
           <h1>
-            Comprendre mes tarifs<br>
-            <span class="accent">en toute transparence</span>
+            Les 12 « commandements »<br />
+            <span class="accent">de mes tarifs</span>
           </h1>
           <p class="hero-subtitle">
-            Ce document vous explique précisément ce que vous payez, ce que vous ne payez pas,
-            et tout le travail (visible et invisible) qui se cache derrière une intervention.
+            Vous êtes pleinement légitime à vous interroger sur mes tarifs&nbsp;:
+            ce document est là pour y répondre clairement, avec la transparence
+            que vous êtes en droit d’attendre.
           </p>
         </div>
         <div class="hero-meta">
@@ -350,7 +353,7 @@
       </div>
     </header>
 
-    <section class="grid" aria-label="Détail des tarifs">
+    <section class="grid" aria-label="Détail des 12 commandements">
 
       <!-- 1 -->
       <article class="block">
@@ -687,7 +690,9 @@
     </section>
 
     <section class="summary" aria-label="Synthèse">
-      <h2>Pourquoi ce document&nbsp;?</h2>
+      <h2>
+        En deux mots&nbsp;: <span class="accent">confiance & transparence</span>
+      </h2>
       <div class="summary-grid">
         <div class="summary-item">
           <span>Vision</span>
@@ -699,7 +704,7 @@
         </div>
         <div class="summary-item">
           <span>Confiance</span>
-          <strong>Construire une relation durable, pas un simple dépannage ponctuel.</strong>
+          <strong>Construire une relation durable, pas un simple dépannage.</strong>
         </div>
         <div class="summary-item">
           <span>Proximité</span>
