--- a/tarifs.html
+++ b/tarifs.html
@@ -346,8 +346,8 @@
           </p>
         </div>
         <div class="hero-meta">
-          <div><strong>Format</strong> : service 100&nbsp;% indépendant, sans vente de matériel</div>
-          <div><strong>Zone</strong> : Plateau Cerdagne / Capcir et environs</div>
+          <div><strong>Format</strong> : prestation de service à domicile, sans vente de matériel</div>
+          <div><strong>Zone</strong> : Plateau Cerdagne / Capcir</div>
           <div><strong>Statut</strong> : micro-entreprise – profession libérale</div>
         </div>
       </div>
