mentions-legales.html

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -401,7 +401,7 @@
           </h1>
           <p class="hero-subtitle">
             Ce document unique regroupe les mentions légales, les Conditions Générales de Vente (CGV),
-            ainsi que les informations relatives à la protection de vos données personnelles et aux cookies.
+            ainsi que les informations relatives à la protection de vos données personnelles et aux cookies.<br>
             <strong>Dernière mise à jour : 27/10/2025.</strong>
           </p>
                 <div class="hero-actions">
@@ -409,8 +409,7 @@
           href="https://www.informatique-cerdagne.fr/mentions-legales.pdf"
           class="btn-download"
           download
-        >
-          ⬇︎ Télécharger ces mentions au format PDF
+        >Télécharger ces mentions au format PDF
           <span class="btn-download__note">(support durable)</span>
         </a>
       </div>
