--- a/tarifs.html
+++ b/tarifs.html
@@ -100,104 +100,89 @@
       padding: 2.4rem 1.5rem 3.75rem;
     }
 
-    /* ========= HERO ========= */
+/* ========= HERO ========= */
 
-    header.hero {
-      margin-bottom: 2.75rem;
-      padding: 2.4rem 2.1rem 2.3rem;
-      border-radius: var(--radius-xl);
-      background: var(--card);
-      box-shadow: var(--shadow-soft);
-      border: 1px solid rgba(148, 163, 184, 0.35);
-      position: relative;
-      overflow: hidden;
-    }
+header.hero {
+  margin-bottom: 2.75rem;
+  padding: 2.4rem 2.1rem 2.3rem;
+  border-radius: var(--radius-xl);
+  background: var(--card);                 /* fond uni, sombre */
+  box-shadow: var(--shadow-soft);
+  border: 1px solid rgba(148, 163, 184, 0.45);
+  position: relative;
+  overflow: hidden;
+}
 
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      border-radius: inherit;
-      pointer-events: none;
-      border: 1px solid transparent;
-      background:
-        linear-gradient(135deg, var(--pink), var(--yellow)) border-box;
-      mask:
-        linear-gradient(#000 0 0) padding-box,
-        linear-gradient(#000 0 0);
-      mask-composite: xor;
-              mask-composite: exclude;
-      opacity: 0.35;
-    }
+/* plus de ::before, on garde le hero propre */
 
-    .hero-inner {
-      position: relative;
-      z-index: 1;
-      display: grid;
-      gap: 1.65rem;
-    }
+.hero-inner {
+  position: relative;
+  z-index: 1;
+  display: grid;
+  gap: 1.65rem;
+}
 
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.45rem;
-      padding: 0.25rem 0.75rem 0.3rem;
-      border-radius: 999px;
-      font-size: 0.8rem;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      background: #020617;
-      color: var(--muted);
-      border: 1px solid rgba(148, 163, 184, 0.7);
-    }
+.badge {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.45rem;
+  padding: 0.25rem 0.75rem 0.3rem;
+  border-radius: 999px;
+  font-size: 0.8rem;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  background: #020617;
+  color: var(--muted);
+  border: 1px solid rgba(148, 163, 184, 0.7);
+}
 
-    .badge-dot {
-      width: 7px;
-      height: 7px;
-      border-radius: 999px;
-      background: radial-gradient(circle at 30% 0%, var(--yellow), var(--pink));
-      box-shadow: 0 0 10px rgba(248, 250, 252, 0.6);
-    }
+.badge-dot {
+  width: 7px;
+  height: 7px;
+  border-radius: 999px;
+  background: radial-gradient(circle at 30% 0%, var(--yellow), var(--pink));
+  box-shadow: 0 0 10px rgba(248, 250, 252, 0.6);
+}
 
-    h1 {
-      font-size: clamp(2.2rem, 3.2vw, 2.8rem);
-      line-height: 1.1;
-      font-weight: 800;
-      letter-spacing: -0.03em;
-      margin: 1rem 0 0.85rem;
-    }
+h1 {
+  font-size: clamp(2.2rem, 3.2vw, 2.8rem);
+  line-height: 1.1;
+  font-weight: 800;
+  letter-spacing: -0.03em;
+  margin: 1rem 0 0.85rem;
+}
 
-    h1 span.accent {
-      background: linear-gradient(90deg, var(--yellow), var(--pink));
-      background-clip: text;
-      color: transparent;
-    }
+h1 span.accent {
+  background: linear-gradient(90deg, var(--yellow), var(--pink));
+  -webkit-background-clip: text;
+  color: transparent;
+}
 
-    .hero-subtitle {
-      max-width: 700px;
-      color: var(--muted);
-      font-size: 0.98rem;
-      margin-bottom: 0.35rem;
-    }
+.hero-subtitle {
+  max-width: 700px;
+  color: var(--muted);
+  font-size: 0.98rem;
+  margin-bottom: 0.35rem;
+}
 
-    .hero-subtitle strong {
-      color: #fefce8;
-      font-weight: 600;
-    }
+.hero-subtitle strong {
+  color: #fefce8;
+  font-weight: 600;
+}
 
-    .hero-meta {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem 1.75rem;
-      margin-top: 1.1rem;
-      font-size: 0.85rem;
-      color: var(--muted);
-    }
+.hero-meta {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem 1.75rem;
+  margin-top: 1.1rem;
+  font-size: 0.85rem;
+  color: var(--muted);
+}
 
-    .hero-meta strong {
-      color: var(--text);
-      font-weight: 600;
-    }
+.hero-meta strong {
+  color: var(--text);
+  font-weight: 600;
+}
 
     /* ========= BLOC PRINCIPAL ========= */
 
