--- a/tarifs.html
+++ b/tarifs.html
@@ -154,7 +154,7 @@ h1 {
 
 h1 span.accent {
   background: linear-gradient(90deg, var(--yellow), var(--pink));
-  -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
