--- a/tarifs.html
+++ b/tarifs.html
@@ -423,7 +423,7 @@ h1 span.accent {
           </div>
           <h1>
             Les 12 <span class="accent">« commandements »</span><br>
-            de mes tarifs
+            de la tarification
           </h1>
           <p class="hero-subtitle">
             Pour moi, c’est normal – et sain – que vous vous interrogiez sur le prix d’une prestation.
